smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-invalid-object-key3.smithy
// Parse error at line 3, column 17 near `{}`: Unexpected object key character: '{'
namespace com.foo
@foo(foo: true, {}: true)
string MyString
